# kario-studio

./: .gitignore  Cargo.toml  README.md
crates/api/: Cargo.toml
crates/api/src/: db.rs  jobs.rs  main.rs  routes.rs  worker.rs
exporter-base/: Cargo.toml
exporter-base/src/: main.rs  video_scene.rs
kario-studo-web/: README.md  index.html  package-lock.json  package.json
kario-studo-web/src/: App.jsx  Editor.jsx  main.jsx  styles.css
kario-studo-web/src/components/: Dashboard.jsx  Edges.jsx  InputNode.jsx  Lightbox.jsx  NodeCard.jsx  StartNode.jsx
kario-studo-web/src/lib/: api.js  constants.js  layout.js  utils.js
scripts/: setup_templates.mjs
storage/cache/workspace/: Cargo.toml
storage/cache/workspace/src/: exporter.rs
storage/templates/agentic_hackathon/: video_scene.rs
storage/templates/product_launch/: video_scene.rs
storage/templates/simple/: video_scene.rs
