[package]
name = "exporter-base"
version = "0.1.0"
edition = "2021"

[dependencies]
kario-base     = { git = "ssh://git@github.com/karioai/kario.git", branch = "kariobase", version = "0.1.0" }
kario-renderer = { git = "ssh://git@github.com/karioai/kario.git", branch = "kariobase", version = "0.1.0" }
serde          = { version = "1.0", features = ["derive"] }
serde_json     = "1.0"
log            = "0.4"
env_logger     = "0.11"
anyhow         = "1"
pollster       = "0.3"
image          = "0.25"
ureq           = "2.9"
wgpu           = "29.0.1"

[workspace]
